--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#667eea">
     <title>Happy Birthday Mama! 🎉</title>
     <link rel="stylesheet" href="style.css">
@@ -15,7 +13,7 @@
     <div id="loadingScreen" class="loading-screen">
         <div class="loading-content">
             <div class="loading-spinner"></div>
-            <h2 class="loading-text">Preparing something special...</h2>
+            <h2 class="loading-text">Preparing for 2nd September....</h2>
             <div class="loading-particles">
                 <div class="particle"></div>
                 <div class="particle"></div>
